--- a/src/App.scss
+++ b/src/App.scss
@@ -20,7 +20,7 @@
         border-radius: 8px;
         color: #FFF4E0;
         cursor: pointer;
-
+        position: relative;
         &:hover {
             background-color: #9FE8FA;
             color: black;
@@ -41,6 +41,12 @@
         word-break: break-all;
         text-align: center;
 
+        >img {
+            width: 100%;
+            max-width: 300px;
+            height: 300px;
+        }
+
         #downloadIcon {
             position: absolute;
             bottom: 0;
@@ -56,10 +62,6 @@
             border-radius: 5px;
         }
 
-        >img {
-            width: 100%;
-        }
-
     }
 
     .fileDescription {
@@ -71,5 +73,52 @@
         align-items: center;
         gap: 5px;
         text-align: center;
+    }
+}
+
+.modal {
+    opacity: 0;
+    background-color: #00c851;
+    padding: 10px;
+    border-radius: 12px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    translate: 20% 50%;
+    z-index: 2;
+    transition: all 0.3s ease-in-out;
+}
+
+//loading
+.lds-dual-ring {
+    display: inline-block;
+    width: 100%;
+    max-width: 10px;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+}
+
+.lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 14px;
+    height: 14px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid #fff;
+    border-color: #fff transparent #fff transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
     }
 }
